--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-scripts",
-  "version": "3.0.1",
+  "name": "@karuna-health/react-scripts",
+  "version": "3.0.1.internal.1",
   "description": "Configuration and scripts for Create React App.",
   "repository": {
     "type": "git",
