--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@karuna-health/react-scripts",
-  "version": "3.0.1-internal.2",
+  "version": "3.0.1-internal.3",
   "description": "Configuration and scripts for Create React App.",
   "repository": {
     "type": "git",
@@ -85,6 +85,7 @@
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
+    "webpack-subresource-integrity": "^1.3.2",
     "workbox-webpack-plugin": "4.2.0"
   },
   "devDependencies": {
