--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -37,6 +37,7 @@
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
+    "babel-plugin-add-react-displayname": "0.0.5",
     "babel-plugin-idx": "^2.4.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-named-asset-import": "^0.3.2",
