--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -86,6 +86,7 @@
     "webpack": "4.41.2",
     "webpack-dev-server": "3.9.0",
     "webpack-manifest-plugin": "2.2.0",
+    "webpack-subresource-integrity": "^1.4.0",
     "workbox-webpack-plugin": "4.3.1"
   },
   "devDependencies": {
