--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -52,6 +52,7 @@
     "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.5.2",
     "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "^1.6.1",
@@ -66,6 +67,7 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
